Rust/tests/Programs/fail_compile/007_unsafe_block_not_supported.to
let c = alloc(1)
unsafe {
  free(c)
}
